crates/templates/tests/snapshots/command_usage_test__render-9.snap
---
source: crates/templates/tests/command_usage_test.rs
description: Command usage with options and flags
expression: output
---
foo_usage() {
  printf "Test simple usage\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo [OPTIONS]\n"
  printf "  foo -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -cm --choices [<CHOICES-MULTIPLE>]\n"
  printf "    Test option with choices and multiple\n"
  printf "    [@multiple, @choices foo|bar|baz]\n"
  printf "  -s --short\n"
  printf "    Test short flag\n"
  printf "  --verbose\n"
  printf "    Test verbose flag\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}
